# APIMAC

Maths pour l'info/TP1 - Notation en virgule flottante/: calculsFaciles  calculsFaciles.cpp
Maths pour l'info/TP2 - Produit matriciel/Correction TP2/: dotProduct.cpp  eigenSample.cpp
Maths pour l'info/TP2 - Produit matriciel/src_student/src_student/: CMakeLists.txt
Maths pour l'info/TP3 - Strassen/Correction TP2/: matrixProduct.cpp  permutation.cpp
Maths pour l'info/TP3 - Strassen/Correction TP3/benchmark/: benchmark.cpp
Maths pour l'info/TP3 - Strassen/Correction TP3/verification_produit_matriciel/: verif.cpp
Maths pour l'info/TP3 - Strassen/src_student/: CMakeLists.txt
Maths pour l'info/TP3 - Strassen/src_student/src/: TP3_ex1.cpp  eigen_sample  eigen_sample.cpp
Maths pour l'info/TP4 - Gauss Seidel/: CMakeLists.txt  Notes.txt
Maths pour l'info/TP4 - Gauss Seidel/Correction TP4/comparatif/: comparatif.cpp
Maths pour l'info/TP4 - Gauss Seidel/Correction TP4/gaussSeidel/: gaussSeidel.cpp
Maths pour l'info/TP4 - Gauss Seidel/src/: TP4_ex1.cpp
Maths pour l'info/TP5 - Recherche de zéro/: CMakeLists.txt
Maths pour l'info/TP5 - Recherche de zéro/src/: main.cpp
Maths pour l'info/TP7 - Polynômes/: CMakeLists.txt
Maths pour l'info/TP7 - Polynômes/src/: Polynomial.cpp  Polynomial.hpp  main.cpp
Maths pour l'info/TP8 - Exponentielle/: CMakeLists.txt
Maths pour l'info/TP8 - Exponentielle/Correction/: CMakeLists.txt
Maths pour l'info/TP8 - Exponentielle/Correction/src/: main.cpp
Maths pour l'info/TP8 - Exponentielle/src/: main.cpp
Maths pour l'info/TP9 - Aléatoire/: CMakeLists.txt  sdl_random.cpp
Maths pour l'info/TP9 - Aléatoire/Correction TP9/nonTransitiveDices/: nonTransitiveDices.cpp
Maths pour l'info/TP9 - Aléatoire/Correction TP9/pi/: pi_quart_cercle.cpp
Maths pour l'info/TP9 - Aléatoire/Correction TP9/tigeBrisee/: tigeBrisee.cpp
Maths pour l'info/TP9 - Aléatoire/src/: sdl_random.cpp
Maths proba/TP1 Aléatoire/: CMakeLists.txt
Maths proba/TP1 Aléatoire/src/: Rand.cpp
Maths proba/TP2 Pile ou face/: CMakeLists.txt
Maths proba/TP2 Pile ou face/src/: de_6_faces.cpp  pile_ou_face.cpp
Programmation/TP1 - Synthaxe/: TP1_ex1  TP1_ex1.cpp  TP1_ex2  TP1_ex2.cpp
Programmation/TP1 - Synthaxe/Correction/: TP1_ex1.cpp  TP1_ex2.cpp  TP1_ex3.cpp
Programmation/TP2 - L'objet/: CMakeLists.txt
Programmation/TP2 - L'objet/Correction/src/: VectorD.hpp
Programmation/TP2 - L'objet/Correction_compacte/src/: VectorD.cpp  VectorD.hpp  main.cpp
Programmation/TP2 - L'objet/src/: Notes.txt  VectorD  VectorD.cpp  VectorD.hpp  main.cpp
Programmation/TP2 - L'objet/src_student/src/: Notes.txt  VectorD.cpp  VectorD.hpp  main.cpp
Programmation/TP3 - L'objet suite/Correction/: CMakeLists.txt
Programmation/TP3 - L'objet suite/Correction/src/: VectorD.cpp  VectorD.hpp  main.cpp
Programmation/TP3 - L'objet suite/TP2 Correction/correction/version2_compact/: CMakeLists.txt
Programmation/TP3 - L'objet suite/TP2 Correction/correction/version2_compact/src/: Notes.txt  main.cpp
Programmation/TP3 - L'objet suite/src/: Notes.txt  VectorD.cpp  VectorD.hpp
Programmation/TP4 - Les templates/exo1/: ex1.cpp
Programmation/TP4 - Les templates/exo2/: VectorX.hpp  main.cpp
Programmation/TP4 - Les templates/exo3/: Tableau.hpp  main.cpp
Programmation/TP5 - Les exceptions/01 Assertion/: CMakeLists.txt  Notes.txt
Programmation/TP5 - Les exceptions/01 Assertion/src/: Plop.hpp  main.cpp
Programmation/TP5 - Les exceptions/02 STL/: CMakeLists.txt
Programmation/TP5 - Les exceptions/02 STL/src/: main.cpp
Programmation/TP5 - Les exceptions/03 Vector/src/: VectorD.cpp  VectorD.hpp
Programmation/TP5 - Les exceptions/04 MyExceptions/: CMakeLists.txt
Programmation/TP5 - Les exceptions/04 MyExceptions/src/: VectorD.cpp  VectorD.hpp  main.cpp
Programmation/TP7 - La STL/01 vector/: CMakeLists.txt
Programmation/TP7 - La STL/01 vector/src/: ex3.cpp  main.cpp
Programmation/TP7 - La STL/03 map/: CMakeLists.txt
Programmation/TP7 - STL/01 vector/src/: ex1.cpp  ex2.cpp
Programmation/TP7 - STL/02 list/: CMakeLists.txt
Programmation/TP7 - STL/02 list/src/: main.cpp
Programmation/TP7 - STL/03 map/src/: main.cpp
Programmation/TP8 - Google Test/: CMakeLists.txt  readme.md
Programmation/TP8 - Google Test/googletest/: CMakeLists.txt
Programmation/TP8 - Google Test/myCode/: CMakeLists.txt
Programmation/TP8 - Google Test/myLib/: CMakeLists.txt
Programmation/TP8 - Google Test/myLib/include/: VectorD.hpp
Programmation/TP8 - Google Test/myLib/src/: VectorD.cpp
Programmation/TP8 - Google Test/myTest/src/: sample_test.cpp
Programmation/TP9 - Avancé/: CMakeLists.txt  correction.cpp
Programmation/TP9 - Avancé/src/: main.cpp
Synthèse d'image/GLImac-Template/: .clang-tidy  .gitignore  CMakeLists.txt
Synthèse d'image/GLImac-Template/TP1/: exo1_triangle_blanc.cpp  exo2_triangle_couleurs.cpp
Synthèse d'image/TP-Template/: CMakeLists.txt
Synthèse d'image/TP-Template/TP3_exo1_triangle_blanc/: main.cpp
Synthèse d'image/TP-Template/TP3_exo2_triangle_couleurs/: main.cpp
Synthèse d'image/TP-Template/TP3_exo3_structure_vertex/: main.cpp
Synthèse d'image/TP-Template/TP3_exo3_structure_vertex.cpp/: main.cpp
Synthèse d'image/TP-Template/TP3_exo4_quad/: main.cpp
Synthèse d'image/TP-Template/TP3_exo5_disque/: main.cpp
Synthèse d'image/TP-Template/TP3_exo6_disque _opt/: main.cpp
Synthèse d'image/TP-Template/TP3_exo6_disque_opt/: main.cpp
Synthèse d'image/TP-Template/TP4_exo1/: main.cpp
Synthèse d'image/TP-Template/TP4_exo1_triangle_couleurs/: main.cpp
Synthèse d'image/TP-Template/TP4_exo2_triangle_gris/: main.cpp
Synthèse d'image/TP-Template/TP4_exo2_triangle_gris/shaders/: grey2D.fs.glsl  grey2D.vs.glsl
Synthèse d'image/TP-Template/TP4_exo3_particule/: main.cpp
Web/API/: App.txt  README.md  index.html  package-lock.json  package.json  reflexion.txt
Web/API/src/: App.txt  App.vue  main.js
Web/API/src/components/: AZFilter.vue  (+12 more)
Web/projet_web/: README.md  package-lock.json  package.json
Web/projet_web/src/: App.vue  main.js  test.vue
(+9 files in other folders)
